# coop-dax-review

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  PUBLISHING.md  README.md  RULES.md  SPEC.md  model.pbit  pyproject.toml  test_pbir_wiring.py
.githooks/: pre-commit
.github/workflows/: ci.yml  publish.yml
docs/: standards-proposed-additions.md  standards.md
scripts/: release-check.sh
src/coop_dax_review/: __init__.py  __main__.py  cli.py  diagnostics.py  engine.py  finding.py  model.py  report.py  standards.py  suppressions.py  upgrade.py
src/coop_dax_review/data/: standards.md
src/coop_dax_review/parsers/: __init__.py  bim.py  dax.py  pbir.py  pbit.py  syntax_validation.py  tmdl.py  vpax.py
src/coop_dax_review/rules/: __init__.py  base.py  dax_auto_datetime.py  dax_bidi_relationship.py  dax_broken_field_ref.py  dax_column_prefixed.py  dax_complex_no_header.py  dax_context_transition.py  dax_dead_inactive_relationship.py  dax_directlake_no_calc_col.py  dax_display_folders.py  dax_earlier_to_var.py  dax_estate_format_drift.py  dax_estate_measure_drift.py  dax_filter_table_in_calculate.py  dax_format_string.py  dax_hide_fk_columns.py  dax_high_cardinality_text.py  dax_iferror_wrapping.py  dax_implicit_measure.py  dax_no_float_keys.py  (+17 more)
tests/: conftest.py  test_auto_datetime.py  test_calculation_groups.py  test_candidate_rules.py  test_cli.py  test_complex_no_header.py  test_context_transition.py  test_core_wiring.py  test_corpus.py  test_dax_utils.py  test_determinism.py  test_diff_against.py  test_directlake_no_calc_col.py  test_engine.py  test_explain.py  test_filter_table_in_calculate.py  test_fingerprint_identity.py  test_m5_batch2_rules.py  test_m5_rules.py  test_measure_in_iterator.py  test_parser_tmdl.py  test_pbir.py  test_pbit.py  test_regressions.py  test_report.py  test_review_fixes.py  test_review_round2.py  test_rules.py  test_sarif.py  test_simple_functions.py  test_snowflake.py  test_standards.py  test_standards_sync.py  test_star_schema.py  test_suppressions.py  test_syntax_errors.py  test_syntax_errors_precision.py  test_upgrade.py  test_validation.py  test_var_return.py  (+2 more)
tests/fixtures/: legacy.bim
(+4 files in other folders)
